--- a/index.html
+++ b/index.html
@@ -1,1 +1,12 @@
+<head>
+<style>
+img
+{
+    max-width: 100%;
+    max-height: 100%;
+}
+</style>
+</head>
+<body>
 <img src="https://lennihein.github.io/kt_take_my_energy_4.png">
+</body>
